# HaloInfiniteGetter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: pypi.yaml  test-pypi.yaml
requirements/: requirements_dev_pre_commit.txt  requirements_hard.txt  requirements_soft.txt
src/hi_getter/: __init__.py  __main__.py  _version.py  client.py  constants.py  events.py  exception_hook.py  exceptions.py  lang.py  models.py  run.py  tomlfile.py  types.py  utils.py
src/hi_getter/_vendor/: __init__.py
src/hi_getter/_vendor/packaging/: __init__.py
src/hi_getter/gui/: __init__.py  _impl.py  aliases.py  app.py  menus.py  utils.py  widgets.py  windows.py  workers.py
src/hi_getter/gui/menus/: __init__.py  cache_index.py  column.py  file.py  help.py  tools.py
src/hi_getter/gui/widgets/: __init__.py  cache_explorer.py  combo_box.py  exception_logger.py  external_text_browser.py  history_combo_box.py  paste_line_edit.py
src/hi_getter/gui/windows/: __init__.py  application.py  changelog_viewer.py  exception_reporter.py  license_viewer.py  readme_viewer.py  scan_selector_dialog.py  settings.py
src/hi_getter/network/: __init__.py  client.py  manager.py  structures.py  utils.py  version_check.py
src/hi_getter/resources/: CreateShortcut.ps1  default_settings.toml  wp_endpoint_hosts.json
src/hi_getter/resources/lang/: en.default.json  en_us.json
src/hi_getter/resources/scripts/: CreateShortcut.ps1  upgrade_version.py
src/hi_getter/resources/themes/dark/: stylesheet.qss
src/hi_getter/resources/themes/light/: stylesheet.qss
src/hi_getter/utils/: __init__.py  common.py  gui.py  network.py  package.py  system.py
