[metadata]
name = hi_getter
version = attr: hi_getter._version.__version__
author = Cubicpath
author_email = Cubicpath@pm.me
description = A simple way to get live Halo data straight from Halo Waypoint.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cubicpath/HaloInfiniteGetter
license = MIT
license_file = LICENSE
platforms = UNKNOWN
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: User Interfaces
    Typing :: Typed

[options]
python_requires = >=3.10
install_requires =
    PyQt6>=6.2.2
    python-dotenv>=0.19.2
    requests>=2.26.0
    toml>=0.10.2
package_dir =
    = src
packages =
    hi_getter
    hi_getter.gui
zip_safe = False

[options.package_data]
* =
    py.typed
hi_getter =
    resources/*
    resources/icons/*
    resources/themes/dark/*
    resources/themes/light/*