[metadata]
name = hi_getter
version = attr: hi_getter._version.__version__
author = Cubicpath
author_email = cubicpath@pm.me
description = A simple way to get live Halo data straight from Halo Waypoint.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: User Interfaces
    Typing :: Typed
keywords = halo, waypoint, infinite, gui, app, getter, HaloInfiniteGetter
project_urls =
    Source Code = https://github.com/Cubicpath/HaloInfiniteGetter
    Issue Tracker = https://github.com/Cubicpath/HaloInfiniteGetter/issues

[options]
python_requires = >=3.10
install_requires =
    PySide6>=6.2.4
    pyshortcuts>=1.8.2
    python-dotenv>=0.20.0
    requests>=2.27.1
    toml>=0.10.2
package_dir =
    = src
packages =
    hi_getter
    hi_getter.gui
zip_safe = False

[options.package_data]
* =
    py.typed
hi_getter =
    resources/*
    resources/icons/*
    resources/lang/*
    resources/themes/dark/*
    resources/themes/light/*

[options.entry_points]
gui_scripts =
    hi_getter = hi_getter.run:main

[options.extras_require]
testing =
    pylint!=2.13.*,>=2.12.2
