[metadata]
name = hi_getter
description = A simple way to get live Halo data straight from Halo Waypoint.
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: hi_getter._version.__version__
keywords = halo, waypoint, infinite, gui, app, getter, HaloInfiniteGetter
license = MIT
license_file = LICENSE
author = Cubicpath
author_email = cubicpath@pm.me
url = https://github.com/Cubicpath/HaloInfiniteGetter
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: User Interfaces
    Typing :: Typed
project_urls =
    Source Code = https://github.com/Cubicpath/HaloInfiniteGetter
    Issue Tracker = https://github.com/Cubicpath/HaloInfiniteGetter/issues

[options]
zip_safe = False
python_requires = >=3.10
install_requires =
    PySide6_Essentials>=6.3.1
    pyshortcuts>=1.8.2
    python-dotenv>=0.20.0
    requests>=2.27.1
    toml>=0.10.2
package_dir =
    = src
packages =
    hi_getter
    hi_getter.gui
    hi_getter.network

[options.package_data]
* =
    py.typed
hi_getter =
    resources/*
    resources/*/*

[options.entry_points]
gui_scripts =
    hi_getter = hi_getter.run:main

[options.extras_require]
dev =
    pylint!=2.13.*,>=2.12.2
